# inter-process-comm

./: CMakeLists.txt  comm_channel.hpp
ut/: CMakeLists.txt
